// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses message 1`] = `
<div>
  <h3>
    Budg-It: 
    $0.00
  </h3>
  <h1>
    Expenses
  </h1>
  <h3>
    Total Expenses: 
    $0.00
  </h3>
  <p>
    No expenses match your query. Add new expenses or change your query to view existing expenses
  </p>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <h3>
    Budg-It: 
    $124.85
  </h3>
  <h1>
    Expenses
  </h1>
  <h3>
    Total Expenses: 
    $124.85
  </h3>
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={11195}
    createdAt={-345600000}
    description="Payment"
    id="2"
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={1095}
    createdAt={345600000}
    description="Food"
    id="3"
    key="3"
    note=""
  />
</div>
`;
